mdapipkg/unpackaged/objects/TTC_records__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TTC records</relationshipLabel>
        <relationshipName>TTC_records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collaboration_Type__c</fullName>
        <label>Collaboration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restart installation</fullName>
                </value>
                <value>
                    <fullName>Version Update</fullName>
                </value>
                <value>
                    <fullName>Security update</fullName>
                </value>
                <value>
                    <fullName>Unlock account</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Installation Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Summary__c</fullName>
        <label>Engagement Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>digital</fullName>
                </value>
                <value>
                    <fullName>private</fullName>
                </value>
                <value>
                    <fullName>hybrid</fullName>
                </value>
                <value>
                    <fullName>public</fullName>
                </value>
                <value>
                    <fullName>community</fullName>
                </value>
                <value>
                    <fullName>multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>TTC records</relationshipLabel>
        <relationshipName>TTC_records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TTC records</relationshipLabel>
        <relationshipName>TTC_records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TTC_records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_by_Date__c</fullName>
        <label>Respond by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTC_action__c</fullName>
        <label>TTC action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTC_comment__c</fullName>
        <label>TTC comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTC_status__c</fullName>
        <label>TTC status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>TTC Collaborated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_information_needed__c</fullName>
        <label>Technical information needed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_cases_to_Address__c</fullName>
        <label>Use cases to Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Technical Team Collaboration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TTC_status__c</columns>
        <columns>Collaboration_Type__c</columns>
        <columns>Scope__c</columns>
        <columns>Engagement_Summary__c</columns>
        <columns>Environment__c</columns>
        <columns>Use_cases_to_Address__c</columns>
        <columns>Technical_information_needed__c</columns>
        <columns>Respond_by_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>TTC-{00000}</displayFormat>
        <label>Technical Team Collaboration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTC records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Link_TTC_to_a_Lead_or_Opportunity</fullName>
        <active>true</active>
        <description>Link_TTC_to_a_Lead_or_Opportunity</description>
        <errorConditionFormula>AND(ISBLANK(Lead__c),ISBLANK(Opportunity__c))</errorConditionFormula>
        <errorMessage>TTC collaboration needs to be linked to either Lead or Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Respond_by_date_should_be_in_future</fullName>
        <active>true</active>
        <description>Respond by date should be in future and minimum 5 days interval from today</description>
        <errorConditionFormula>Respond_by_Date__c &lt; TODAY()+5</errorConditionFormula>
        <errorDisplayField>Respond_by_Date__c</errorDisplayField>
        <errorMessage>Respond by date should be in future and minimum 5 days interval from today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TTC_text_areas_blank_validation_error</fullName>
        <active>true</active>
        <description>TTC_text_areas_blank_validation_error</description>
        <errorConditionFormula>OR(ISBLANK(Scope__c), ISBLANK(Technical_information_needed__c ), ISBLANK(Engagement_Summary__c), ISBLANK(TEXT(Environment__c) ))</errorConditionFormula>
        <errorMessage>Scope,Technical_information_needed, Engagement_Summary &amp; Environment__c cannot be blank</errorMessage>
    </validationRules>
</CustomObject>